test/corpus/mexpr.txt
===============================================================================
Application 1
===============================================================================

mexpr
0 '1'

---

(program (mexpr (app (int)
                     (char))))

===============================================================================
Application 2
===============================================================================

mexpr
0 '1' "2"

---

(program (mexpr (app (app (int)
                          (char))
                     (string))))

===============================================================================
Variables 1
===============================================================================

mexpr
x

---

(program (mexpr (var)))

===============================================================================
Variables Application
===============================================================================

mexpr
x y

---

(program (mexpr (app (var) (var))))

===============================================================================
Lamda 1
===============================================================================

mexpr
lam x. x

---

(program (mexpr (lam (binding (var_ident)) (var))))

===============================================================================
Lamda 2
===============================================================================

mexpr
lam x. lam y. x y

---

(program (mexpr (lam (binding (var_ident))
                     (lam (binding (var_ident)) (app (var) (var))))))

===============================================================================
Let 1
===============================================================================

mexpr
let x = y in z

---

(program (mexpr (let_in (binding (var_ident)) (var) (var))))

===============================================================================
Let 2
===============================================================================

mexpr
let x = y in
let z = 1 in z

---

(program (mexpr (let_in (binding (var_ident)) (var)
                (let_in (binding (var_ident)) (int) (var)))))

===============================================================================
recursive let 1
===============================================================================

mexpr
recursive let x = y in z

---

(program (mexpr (rec_lets_in (let (binding (var_ident)) (var)) (var))))

===============================================================================
recursive let 2
===============================================================================

mexpr
recursive
let x = y
let y = 1
in z

---

(program (mexpr (rec_lets_in (let (binding (var_ident)) (var))
                             (let (binding (var_ident)) (int)) (var))))

===============================================================================
If then else 1
===============================================================================

mexpr
if 1 then x else 0.

---

(program (mexpr (if_then_else (int) (var) (float))))

===============================================================================
If then else 2
===============================================================================

mexpr
if 1 then x else if 0. then y else 1

---

(program (mexpr (if_then_else (int) (var) (if_then_else (float) (var) (int)))))

===============================================================================
Utest 1
===============================================================================

mexpr
utest x with 1 in

---

(program (mexpr (utest_in (var) (int))))

===============================================================================
Utest using 1
===============================================================================

mexpr
utest x with 1 using 2 in

---

(program (mexpr (utest_in (var) (int) (int))))

===============================================================================
Tuple projection
===============================================================================

mexpr
a.1

---

(program (mexpr (proj (var) (proj_label))))

===============================================================================
Record projection
===============================================================================

mexpr
a.label

---

(program (mexpr (proj (var) (proj_label))))

===============================================================================
Tuple 0
===============================================================================

mexpr
()

---

(program (mexpr (tuple)))

===============================================================================
Tuple 1
===============================================================================

mexpr
(1)

---

(program (mexpr (tuple (int))))

===============================================================================
Tuple 2
===============================================================================

mexpr
(1, 2)

---

(program (mexpr (tuple (int) (int))))

===============================================================================
Seq 0
===============================================================================

mexpr
[]

---

(program (mexpr (seq)))

===============================================================================
Seq 1
===============================================================================

mexpr
[1]

---

(program (mexpr (seq (int))))

===============================================================================
Seq 2
===============================================================================

mexpr
[1, 2]

---

(program (mexpr (seq (int) (int))))

===============================================================================
Record 0
===============================================================================

mexpr
{}

---

(program (mexpr (record)))

===============================================================================
Record 1
===============================================================================

mexpr
{a = 1}

---

(program (mexpr (record (label (label_ident) (int)))))

===============================================================================
Record 2
===============================================================================

mexpr
{a = 1, b = 2}

---

(program (mexpr
  (record (label (label_ident) (int)) (label (label_ident) (int)))))

===============================================================================
Record update
===============================================================================

mexpr
{a with b = 1}

---

(program (mexpr (record_update (var) (label (label_ident) (int)))))

===============================================================================
Type declaration
===============================================================================

mexpr
type A in

---

(program (mexpr (type_decl_in (type_ident))))

===============================================================================
Type alias identifier
===============================================================================

mexpr
type A = B in

---

(program (mexpr (type_alias_in (type_ident) (type_ident))))

===============================================================================
Type alias tuple type
===============================================================================

mexpr
type A = (B, C) in

---

(program (mexpr (type_alias_in (type_ident) (type_tuple (type_ident)
                                                        (type_ident)))))

===============================================================================
Type alias record type
===============================================================================

mexpr
type A = {b: B, c: C} in

---

(program (mexpr (type_alias_in (type_ident)
(type_record (type_record_elm (label_ident) (type_ident))
             (type_record_elm (label_ident) (type_ident))))))

===============================================================================
Type alias empty record type
===============================================================================

mexpr
type A = {} in

---

(program (mexpr (type_alias_in (type_ident) (type_record))))

===============================================================================
Type alias list type
===============================================================================

mexpr
type A = [B] in

---

(program (mexpr (type_alias_in (type_ident) (type_list (type_ident)))))

===============================================================================
Type alias unit type
===============================================================================

mexpr
type A = () in

---

(program (mexpr (type_alias_in (type_ident) (type_unit))))

===============================================================================
Type alias type in parens
===============================================================================

mexpr
type A = (B) in

---

(program (mexpr (type_alias_in (type_ident) (type_ident))))

===============================================================================
Type alias arrow type
===============================================================================

mexpr
type A = B -> C in

---

(program (mexpr (type_alias_in (type_ident) (type_arrow (type_ident)
                                                        (type_ident)))))

===============================================================================
Type alias arrow type 2
===============================================================================

mexpr
type A = B -> C -> D in

---

(program (mexpr (type_alias_in (type_ident)
                               (type_arrow (type_ident)
                                           (type_arrow (type_ident)
                                                       (type_ident))))))

===============================================================================
Type alias type application
===============================================================================

mexpr
type A = B C in

---

(program (mexpr (type_alias_in (type_ident) (type_app (type_ident)
                                                      (type_ident)))))

===============================================================================
Type alias type application 2
===============================================================================

mexpr
type A = B C D in

---

(program (mexpr (type_alias_in (type_ident)
(type_app (type_app (type_ident) (type_ident)) (type_ident)))))

===============================================================================
Constructor definition
===============================================================================

mexpr
con A : B in

---

(program (mexpr (con_in (con_ident) (type_ident))))

===============================================================================
Constructor definition 2
===============================================================================

mexpr
con A in

---

(program (mexpr (con_in (con_ident))))
